--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
   </a>
 </li>
   </nav>
-  
+
     <h1>
       Building yourself up
     </h1>
       <h2>
+        <strong>
         Nice font!
+      </strong>
       </h2>
     <P>
       <strong>
